# chat-server

./: .env  Cargo.toml  README.md  SPLIT_SYNC_SUMMARY.md  test_split_sync.py  test_websocket.html
back/: doc.md  test copy.md  test.md
example/: SYNC_README.md  sync_config_example.toml  test_sync.py
example/callback/: CALLBACK_README.md  callback_server.py  config_example.toml  test_callback.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  api.ts
frontend/src/components/: MessageSender.tsx  RoomDetail.tsx  RoomList.tsx
src/: callback.rs  config.rs  db.rs  error.rs  handler.rs  main.rs  models.rs  routes.rs  state.rs  sync.rs
test/: test1.js
